Opened 13 years ago
Closed 12 years ago
#4431 closed bug (fixed)
Panic: calling unlock_memory() on unmapped memory!
Reported by: | mmadia | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #5014 | |
Platform: | All |
Description (last modified by )
x86gcc2, trunk rev 32950, native.
the following command will eventually result in a KDL.
svn co http://svn.osdrawer.net/bezilla
This was performed on a freshly initialized BFS volume with 2k block size.
machine listdev note, this is a dual core machine and with 2x2gb ram. bug not tested with smp disabled.
I was attempting to reproduce another bug with the svn command. however, this different bug appeared.
Attachments (3)
Change History (9)
by , 13 years ago
Attachment: | P1010023.JPG added |
---|
comment:1 by , 13 years ago
Description: | modified (diff) |
---|
comment:2 by , 13 years ago
Description: | modified (diff) |
---|
comment:3 by , 13 years ago
I have almost the same happen to me this morning while doing a "jam clean;jam -j4 -q haiku-cd" on Haiku hrev33344. Some of the numbers are different. From the output on the screen, it looks like it was still doing the clean and hadn't started building yet.
Thing is, I don't have SCSI on my system, and USB is disabled on this VM, so I don't know why a "scsi scheduler" thread is running. Will attach screen shot of my bt.
comment:4 by , 13 years ago
Version: | R1 alpha1 → R1/alpha1 |
---|
bt